@@ -6,7 +6,6 @@ import com.bang_ggood.checklist.dto.response.ChecklistPreviewResponse;
 import com.bang_ggood.checklist.dto.response.ChecklistsPreviewResponse;
 import com.bang_ggood.checklist.dto.response.SelectedChecklistResponse;
 import com.bang_ggood.like.service.ChecklistLikeService;
-import com.bang_ggood.checklist.dto.response.SelectedChecklistResponse;
 import com.bang_ggood.maintenance.domain.ChecklistMaintenance;
 import com.bang_ggood.maintenance.domain.MaintenanceItem;
 import com.bang_ggood.maintenance.service.ChecklistMaintenanceService;
@@ -24,12 +23,13 @@ import com.bang_ggood.room.domain.Room;
 import com.bang_ggood.room.dto.response.SelectedRoomResponse;
 import com.bang_ggood.room.service.RoomService;
 import com.bang_ggood.user.domain.User;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 @Service
 public class ChecklistManageService {
 
@@ -39,19 +39,6 @@ public class ChecklistManageService {
     private final ChecklistQuestionService checklistQuestionService;
     private final ChecklistMaintenanceService checklistMaintenanceService;
     private final ChecklistLikeService checklistLikeService;
-
-    public ChecklistManageService(RoomService roomService, ChecklistService checklistService,
-                                  ChecklistOptionService checklistOptionService,
-                                  ChecklistQuestionService checklistQuestionService,
-                                  ChecklistMaintenanceService checklistMaintenanceService,
-                                  ChecklistLikeService checklistLikeService) {
-        this.roomService = roomService;
-        this.checklistService = checklistService;
-        this.checklistOptionService = checklistOptionService;
-        this.checklistQuestionService = checklistQuestionService;
-        this.checklistMaintenanceService = checklistMaintenanceService;
-        this.checklistLikeService = checklistLikeService;
-    }
 
     @Transactional
     public Long createChecklist(User user, ChecklistRequest checklistRequest) {
@@ -155,7 +142,7 @@ public class ChecklistManageService {
         checklistOptionService.deleteAllByChecklistId(checklist.getId());
         checklistMaintenanceService.deleteAllByChecklistId(checklist.getId());
         checklistService.deleteById(id);
-        roomService.deleteById(checklist.getRoom().getId());
+        roomService.deleteById(checklist.getRoomId());
     }
 
     @Transactional(readOnly = true)
@@ -209,7 +196,7 @@ public class ChecklistManageService {
                 checklistRequest.room().includedMaintenances().stream()
                         .map(maintenanceId -> new ChecklistMaintenance(checklist,
                                 MaintenanceItem.fromId(maintenanceId)))
-                        .collect(Collectors.toList());
+                        .toList();
         checklistMaintenanceService.updateMaintenances(checklist.getId(), checklistMaintenances);
     }
 }
